# greenpeace

./: .gitignore  .goreleaser.yaml  BUILD.bazel  Makefile  README.org  WORKSPACE  WORKSPACE.bazel  go.mod  greenpeace.go
.github/workflows/: ci.yml
cmd/: BUILD.bazel  main.go
