load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/taylormonacelli/greenpeace/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//:greenpeace",
        "@com_github_taylormonacelli_goldbug//:go_default_library",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
